--- a/FakerSpotter/wwwroot/index.html
+++ b/FakerSpotter/wwwroot/index.html
@@ -15,7 +15,7 @@
 
 <div id="app">
     <div style="position: absolute; text-align: center; top: 30vh; width: 100%;">
-        <h2>FakerSpotter (Prototype)</h2>
+        <h1>FakerSpotter</h1>
         <p>By <a href="https://github.com/dentolos19">Dennise Catolos</a></p>
     </div>
 </div>
