--- a/FakerSpotter/wwwroot/index.html
+++ b/FakerSpotter/wwwroot/index.html
@@ -2,13 +2,37 @@
 <html>
 
 <head>
+
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>FakerSpotter</title>
     <base href="/"/>
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet"/>
-    <link href="css/app.css" rel="stylesheet"/>
-    <link href="FakerSpotter.styles.css" rel="stylesheet"/>
+
+    <!-- favicon info -->
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="assets/img/favicons/site.webmanifest">
+
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- local stylesheet imports -->
+
+    <link rel="stylesheet" href="assets/css/app.css"/>
+
+    <!-- post-build stylesheet imports -->
+
+    <link rel="stylesheet" href="FakerSpotter.styles.css"/>
+    <link rel="stylesheet" href="_content/Blazorise/blazorise.css"/>
+    <link rel="stylesheet" href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css"/>
+
+    <!-- external stylesheet imports -->
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+
 </head>
 
 <body>
@@ -19,6 +43,38 @@
         <p>By <a href="https://github.com/dentolos19">Dennise Catolos</a></p>
     </div>
 </div>
+    
+<script type="text/javascript">
+    (function(l)
+        {
+            if (l.search)
+            {
+                var q = {};
+                l.search.slice(1).split("&").forEach(function(v) {
+                    var a = v.split("=");
+                    q[a[0]] = a.slice(1).join("=").replace(/~and~/g, "&");
+                });
+                if (q.p !== undefined)
+                {
+                    window.history.replaceState(null,
+                        null,
+                        l.pathname.slice(0, -1) +
+                        (q.p || "") +
+                        (q.q ? ("?" + q.q) : "") +
+                        l.hash
+                    );
+                }
+            }
+        }
+        (window.location))
+</script>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+
+<script src="_content/Blazorise/blazorise.js"></script>
+<script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
 
 <div id="blazor-error-ui">
     An unhandled error has occurred.
