--- a/FakerSpotter/wwwroot/index.html
+++ b/FakerSpotter/wwwroot/index.html
@@ -10,19 +10,19 @@
 
     <!-- include favicon -->
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png"/>
+    <link rel="manifest" href="assets/favicon/site.webmanifest"/>
 
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-TileColor" content="#da532c"/>
+    <meta name="theme-color" content="#ffffff"/>
 
     <!-- include stylesheets -->
 
     <link rel="stylesheet" href="assets/app.css"/>
-    <link rel="stylesheet" href="assets/addons/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/addons/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="assets/addons/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="assets/addons/fontawesome/css/all.min.css"/>
     <link rel="stylesheet" href="FakerSpotter.styles.css"/>
 
 </head>
