Updated room functions

--- a/FakerSpotter/wwwroot/index.html
+++ b/FakerSpotter/wwwroot/index.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="assets/addons/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="assets/addons/fontawesome/css/all.min.css"/>
     <link rel="stylesheet" href="FakerSpotter.styles.css"/>
+    <link rel="stylesheet" href="_content/Blazorise/blazorise.css"/>
+    <link rel="stylesheet" href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css"/>
 
 </head>
 
@@ -42,9 +44,6 @@
     <a class="dismiss">🗙</a>
 </div>
 
-<script src="assets/addons/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/addons/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="_framework/blazor.webassembly.js"></script>
 <script type="text/javascript">
     (function(l) {
             if (l.search) {
@@ -66,6 +65,11 @@
         }
         (window.location))
 </script>
+<script src="assets/addons/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/addons/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="_framework/blazor.webassembly.js"></script>
+<script src="_content/Blazorise/blazorise.js"></script>
+<script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
 
 </body>
 
