Added leaderboard and awards

--- a/FakerSpotter/wwwroot/index.html
+++ b/FakerSpotter/wwwroot/index.html
@@ -8,7 +8,7 @@
     <title>FakerSpotter</title>
     <base href="/"/>
 
-    <!-- include favicon -->
+    <!-- include favicon & meta -->
 
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png"/>
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png"/>
@@ -67,9 +67,9 @@
 </script>
 <script src="assets/addons/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/addons/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="_framework/blazor.webassembly.js"></script>
 <script src="_content/Blazorise/blazorise.js"></script>
 <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
+<script src="_framework/blazor.webassembly.js"></script>
 
 </body>
 
