--- a/FakerSpotter/wwwroot/404.html
+++ b/FakerSpotter/wwwroot/404.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="utf-8">
     <script type="text/javascript">
-        var s = 0;
-        var l = window.location;
-        l.replace(
-            l.protocol +
-            "//" +
-            l.hostname +
-            (l.port ? ":" + l.port : "") +
-            l.pathname.split("/").slice(0, 1 + s).join("/") +
-            // "/?p=/" +
-            "/" +
-            l.pathname.slice(1).split("/").slice(s).join("/").replace(/&/g, "~and~") +
-            (l.search ? "&q=" + l.search.slice(1).replace(/&/g, "~and~") : "") +
-            l.hash
+        var segmentCount = 0;
+        var windowLocation = window.location;
+        windowLocation.replace(
+            windowLocation.protocol +
+            '//' +
+            windowLocation.hostname +
+            (windowLocation.port ? ':' + windowLocation.port : '') +
+            windowLocation.pathname.split('/').slice(0, 1 + segmentCount).join('/') +
+            '/?p=/' +
+            windowLocation.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
+            (windowLocation.search ? '&q=' + windowLocation.search.slice(1).replace(/&/g, '~and~') : '') +
+            windowLocation.hash
         );
     </script>
 </head>
