--- a/FakerSpotter/wwwroot/index.html
+++ b/FakerSpotter/wwwroot/index.html
@@ -46,6 +46,7 @@
 
 <script src="assets/addons/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/addons/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="_content/BlazorAnimate/blazorAnimateInterop.js"></script>
 <script src="_content/Blazorise/blazorise.js"></script>
 <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
 <script src="_framework/blazor.webassembly.js"></script>
