--- a/FakerSpotter/wwwroot/index.html
+++ b/FakerSpotter/wwwroot/index.html
@@ -38,10 +38,10 @@
     </div>
 </div>
 
-<div id="blazor-error-ui" class="alert alert-danger">
+<div id="blazor-error-ui">
     An unhandled error has occurred.
-    <a class="reload" href="">Reload</a>
-    <a class="btn-close dismiss"></a>
+    <a href="" class="reload">Reload</a>
+    <a class="dismiss">🗙</a>
 </div>
 
 <script src="assets/addons/bootstrap/js/bootstrap.min.js"></script>
