Updated and improved some details

--- a/FakerSpotter/wwwroot/index.html
+++ b/FakerSpotter/wwwroot/index.html
@@ -34,7 +34,7 @@
 <div id="app">
     <div style="position: absolute; text-align: center; top: 30vh; width: 100%;">
         <h1>FakerSpotter</h1>
-        <p>By <a href="https://github.com/dentolos19">Dennise Catolos</a></p>
+        <p>By Brooksians, For Brooksians!</p>
     </div>
 </div>
 
