Added google analytics

--- a/FakerSpotter/wwwroot/index.html
+++ b/FakerSpotter/wwwroot/index.html
@@ -46,10 +46,12 @@
 
 <script src="assets/addons/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/addons/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="_content/Blazor-Analytics/blazor-analytics.js"></script>
 <script src="_content/BlazorAnimate/blazorAnimateInterop.js"></script>
 <script src="_content/Blazorise/blazorise.js"></script>
 <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
 <script src="_framework/blazor.webassembly.js"></script>
+
 
 </body>
 
