Upgraded project to .NET 6

--- a/FakerSpotter/wwwroot/index.html
+++ b/FakerSpotter/wwwroot/index.html
@@ -3,26 +3,29 @@
 
 <head>
 
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>FakerSpotter</title>
     <base href="/"/>
 
-    <!-- include favicon & meta -->
+    <!-- favicon & meta -->
 
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png"/>
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png"/>
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png"/>
     <link rel="manifest" href="assets/favicon/site.webmanifest"/>
 
+    <meta charset="utf-8"/>
     <meta name="msapplication-TileColor" content="#da532c"/>
     <meta name="theme-color" content="#ffffff"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
-    <!-- include stylesheets -->
+    <!-- stylesheets -->
 
     <link rel="stylesheet" href="assets/app.css"/>
     <link rel="stylesheet" href="assets/addons/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="assets/addons/fontawesome/css/all.min.css"/>
+
+    <!-- blazor stylesheets -->
+
     <link rel="stylesheet" href="FakerSpotter.styles.css"/>
     <link rel="stylesheet" href="_content/Blazorise/blazorise.css"/>
     <link rel="stylesheet" href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css"/>
@@ -34,24 +37,28 @@
 <div id="app">
     <div style="position: absolute; text-align: center; top: 30vh; width: 100%;">
         <h1>FakerSpotter</h1>
-        <p>By Brooksians, For Brooksians!</p>
+        <p>By <a href="https://github.com/dentolos19">Dennise Catolos</a></p>
     </div>
 </div>
 
 <div id="blazor-error-ui">
-    An unhandled error has occurred.
+    An unhandled error had occurred.
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
 
+<!-- scripts -->
+
 <script src="assets/addons/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/addons/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!-- blazor scripts -->
+
+<script src="_framework/blazor.webassembly.js"></script>
 <script src="_content/Blazor-Analytics/blazor-analytics.js"></script>
 <script src="_content/BlazorAnimate/blazorAnimateInterop.js"></script>
 <script src="_content/Blazorise/blazorise.js"></script>
 <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
-<script src="_framework/blazor.webassembly.js"></script>
-
 
 </body>
 
