--- a/FakerSpotter/wwwroot/index.html
+++ b/FakerSpotter/wwwroot/index.html
@@ -10,6 +10,7 @@
     <base href="/"/>
 
     <link rel="stylesheet" href="assets/app.css"/>
+    <link rel="stylesheet" href="assets/loader.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 
@@ -22,9 +23,13 @@
 <body>
 
 <div id="app">
-    <div style="position: absolute; text-align: center; top: 30vh; width: 100%;">
+    <div class="splash">
         <h1>FakerSpotter</h1>
         <p>By <a href="https://github.com/dentolos19">Dennise Catolos</a></p>
+        <div class="loader">
+            <div class="spin"></div>
+            <div class="bounce"></div>
+        </div>
     </div>
 </div>
 
@@ -39,8 +44,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 
 <script src="_content/BlazorAnimate/blazorAnimateInterop.js"></script>
-<script src="_content/Blazorise/blazorise.js"></script>
-<script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
 <script src="_framework/blazor.webassembly.js"></script>
 
 </body>
