--- a/FakerSpotter/wwwroot/index.html
+++ b/FakerSpotter/wwwroot/index.html
@@ -9,20 +9,20 @@
         <title>FakerSpotter</title>
         <base href="/"/>
 
-        <link rel="stylesheet" href="FakerSpotter.styles.css"/>
-        <link rel="stylesheet" href="_content/Blazorise/blazorise.css"/>
-        <link rel="stylesheet" href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css"/>
-
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
         <link rel="stylesheet" href="assets/app.css"/>
+
+        <link rel="stylesheet" href="FakerSpotter.styles.css"/>
+        <link rel="stylesheet" href="_content/Blazorise/blazorise.css"/>
+        <link rel="stylesheet" href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css"/>
 
     </head>
 
     <body>
 
         <div id="app">
-            Loading
+            <div class="spinner"></div>
         </div>
 
         <div id="blazor-error-ui">
@@ -32,7 +32,6 @@
         </div>
 
         <script src="_framework/blazor.webassembly.js"></script>
-        <script src="_content/BlazorAnimate/blazorAnimateInterop.js"></script>
 
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
